--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="src/projectile.js"></script>
         <script src="src/enemy.js"></script>
         <script src="src/ui.js"></script>
+        <script src="src/background.js"></script>
         
         <script src="src/main.js"></script>
     </body>
