--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <script src="http://174.138.53.211/cdn/jquery.min.js"></script>
+        <script src="../cdn/jquery.min.js"></script>
         <script src="turtle.js"></script>
         
         <script src="src/player.js"></script>
